# djangocms-redirect

./: .checkignore  .codeclimate.yml  .coveragerc  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  cms_helper.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: test.yml
.tx/: config
changes/: 39.feature
djangocms_redirect/: __init__.py  admin.py  middleware.py  models.py  utils.py
djangocms_redirect/locale/en/LC_MESSAGES/: django.po
djangocms_redirect/migrations/: 0001_initial.py  0002_auto_20170321_1807.py  0002_redirect_language.py  0003_auto_20190810_1009.py  0004_auto_20210502_1408.py  0005_auto_20210514_1532.py  0006_auto_20230831_2032.py  0006_language_languageredirect.py  0006_languageredirect.py
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: __init__.py  base.py  test_middleware.py  test_models.py  tests_admin.py
