[bumpversion]
current_version = 0.6.0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.?)(?P<release>[a-z]*)(?P<relver>\d*)
serialize =
	{major}.{minor}.{patch}.{release}{relver}
	{major}.{minor}.{patch}
commit = True
tag = True
sign_tags = True
tag_name = {new_version}
message = Release {new_version}

[bumpversion:part:release]
optional_value = gamma
values =
	dev
	a
	b
	rc
	gamma

[bumpversion:file:djangocms_redirect/__init__.py]

[metadata]
name = djangocms-redirect
version = attr: djangocms_redirect.__version__
url = https://github.com/nephila/djangocms-redirect
project_urls =
	Documentation = https://djangocms-redirect.readthedocs.io/
author = Iacopo Spalletti
author_email = i.spalletti@nephila.it
description = A django CMS enabled application to handle redirects
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
classifiers =
	License :: OSI Approved :: BSD License
	Development Status :: 5 - Production/Stable
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8

[options]
include_package_data = True
install_requires =
	django-cms>=3.7
setup_requires =
	setuptools
packages = djangocms_redirect
python_requires = >=3.6
test_suite = cms_helper.run
zip_safe = False

[options.package_data]
* = *.txt, *.rst
djangocms_redirect = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[options.extras_require]
docs =
	django<3.1

[upload]
repository = https://upload.pypi.org/legacy/

[sdist]
formats = zip

[bdist_wheel]
universal = 1
